# project_intro_ai

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements_pytorch.txt
.devcontainer/: devcontainer.json
.venv_models/: pyvenv.cfg
data/processed/: ftt_model_results.pkl  ftt_model_results_optuna.pkl  task2_best_model_step3_test_data.csv  task2_best_model_step3_train_data.csv  triathlon_watch_test_preprocessed_john.csv  triathlon_watch_test_preprocessed_john_no_quality.csv  triathlon_watch_test_preprocessed_samu.csv  triathlon_watch_training_preprocessed_andreas.csv  triathlon_watch_training_preprocessed_john.csv  triathlon_watch_training_preprocessed_john_prep_0.csv  triathlon_watch_training_preprocessed_john_prep_1.csv  triathlon_watch_training_preprocessed_john_prep_2.csv  triathlon_watch_training_preprocessed_john_prep_3.csv  triathlon_watch_training_preprocessed_john_prep_4.csv  triathlon_watch_training_preprocessed_john_prep_5.csv  triathlon_watch_training_preprocessed_samu_prep_0.csv
data/raw/: triathlon_watch_test_data_final.csv  triathlon_watch_training_data_final.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: pca_transform_on_train_data.pkl
notebooks/Andreas/: .Andreas Missing_values_and_Repair.ipynb.icloud  Andreas Missing_values_and_Repair.ipynb  Andreas Steps.ipynb  EDA Andreas.ipynb  Task2 Andreas - testset.ipynb  Task2 Andreas.ipynb  log Regression.ipynb  logistic-regression-report.html  model_parameters_Andreas_0.pkl  model_parameters_Andreas_1.pkl  (+11 more)
project_intro_ai/: __init__.py  dataset.py  features.py  plots.py
(+22 files in other folders)
