[tool.poetry]
name = "Intro to AI"
version = "0.1.0"
description = "Dockerconainer for pytorch models"
authors = ["John Torres <jt072@hdm-stuttgart.de>"]
readme = "README.md"

[[tool.poetry.source]]
name = "official_pypi"
url = "https://pypi.org/simple"
default = true

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.3"
pre-commit = "3.3.3"
jupyterlab= "4.2.5"
matplotlib= "3.9.2"
seaborn="0.13.2"
optuna="4.1.0"
scikit-learn="1.5.2"
pyarrow="18.1.0"
tabulate="0.9.0"
pytorch-tabular="1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"